[MODIFY]tailwindのコメントアウト

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
-@import "~tailwindcss/base";
+/* TODO: 一旦完成したら再度使用して、CSSを排除する */
+/* @import "~tailwindcss/base";
 @import "~tailwindcss/components";
-@import "~tailwindcss/utilities";
+@import "~tailwindcss/utilities"; */
