--- a/styles/top/ToSearchButton.module.css
+++ b/styles/top/ToSearchButton.module.css
@@ -1,3 +1,21 @@
 .link_button{
-    background-color: aqua;
+    width: 15em;
+    height: 5em;
+    color: rgb(255, 255, 255);
+    background-color: rgb(132, 138, 227);
+    border: none;
+    border-radius: 18px;
+}
+.link_button2{
+    width: 15em;
+    height: 5em;
+    color: rgb(255, 255, 255);
+    background-color:rgb(132, 138, 227) ;
+    border: none;
+    border-radius: 18px;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
