--- a/styles/common/Header.module.css
+++ b/styles/common/Header.module.css
@@ -1,7 +1,8 @@
 .header {
     position: fixed;
-    background-color: darkgray;
+    background-color: lightgrey;
     font-family: monospace;
     font-size: 16px;
-    
+    box-shadow: 2px 2px 4px gray;
+
 }
