--- a/styles/rooms/ClassroomStatusTable.module.css
+++ b/styles/rooms/ClassroomStatusTable.module.css
@@ -1,7 +1,6 @@
 
 .room_table {
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     width: 800px;
     height: 400px;
     overflow :auto;
