--- a/styles/rooms/ClassroomStatusTable.module.css
+++ b/styles/rooms/ClassroomStatusTable.module.css
@@ -2,6 +2,7 @@
 .room_table {
     font-weight: bold;
     margin: 0 auto;
+    background-color: antiquewhite;
     width: 800px;
     height: 400px;
     overflow :auto;
