--- a/styles/rooms/ClassroomStatusTable.module.css
+++ b/styles/rooms/ClassroomStatusTable.module.css
@@ -1,12 +1,17 @@
 .room_table {
-    font-weight: bold;
+    border: 4px solid #000;
+    border-spacing: 0; 
+    border-collapse: collapse; 
+    border-radius: 10px 10px 10px 10px;
     margin: 0 auto;
     background-color: antiquewhite;
     width: 800px;
     height: 400px;
     overflow :auto;
-    border: 2px solid #000;
-    border-collapse: collapse;
+}
+
+.room_sub {
+    background-color: rgb(168, 159, 159);
 }
 
 .room_tr {
