--- a/styles/rooms/ClassroomStatusTable.module.css
+++ b/styles/rooms/ClassroomStatusTable.module.css
@@ -1,31 +1,27 @@
 .room_table {
+    overflow-y: scroll;
     border: 4px solid #000;
     border-spacing: 0; 
-    border-collapse: collapse; 
+    border-collapse: separate; 
     border-radius: 10px 10px 10px 10px;
     margin: 0 auto;
-    background-color: antiquewhite;
     width: 800px;
-    height: 400px;
+    height: 1600px;
     overflow :auto;
 }
 
+
+
+.room_head{
+   height: 120px;
+   background-color: rgb(160, 203, 240);
+}
+
 .room_sub {
-    background-color: rgb(168, 159, 159);
-}
-
-.room_tr {
-    text-align: center;
-}
-
-.room_th {
-    background-color: aqua;
+    background-color: rgb(235, 230, 230);
 }
 
 .room_main {
-    position: sticky;
-    top: 0;
-    background: aqua;
-    top: 0;
-    z-index: 1;
+    background: rgb(245, 195, 184);
+    width: 200px;
   }
