--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,14 @@
 /* @import "~tailwindcss/base";
 @import "~tailwindcss/components";
 @import "~tailwindcss/utilities"; */
+
+.container {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+/* FIXME: Tailwindと同じようにしているが、早く教育して消したい。 */
+.mt-16 {
+  margin-top: 4rem;
+}
