--- a/styles/common/Header.module.css
+++ b/styles/common/Header.module.css
@@ -9,8 +9,9 @@
     transition: top 300ms;
     box-shadow: 2px 2px 4px gray;
     font-family: monospace;
-    font-size: 30px;
+    font-size: 35px;
     text-align: center;
+    padding-top: 50px;
     
   }
   
