--- a/styles/common/Header.module.css
+++ b/styles/common/Header.module.css
@@ -3,9 +3,12 @@
   background-color: rgb(255, 255, 255);
   position: absolute;
   top: 0px;
-  left: 0%;
-  transition: top 300ms;
+  left: 0px;
   box-shadow: 2px 2px 4px grey;
   font-family: monospace;
-  font-size: 7px;
+}
+
+.header_title {
+  font-size: 1.5em;
+  padding-left: 5px;
 }
