--- a/styles/common/Header.module.css
+++ b/styles/common/Header.module.css
@@ -8,7 +8,7 @@
   font-family: monospace;
 }
 
-.header_title {
-  font-size: 1.5em;
-  padding-left: 5px;
+.header_logo {
+  font-size: 1.3em;
+  margin: 1em 0.5em;
 }
