--- a/styles/rooms/ClassroomStatusTable.module.css
+++ b/styles/rooms/ClassroomStatusTable.module.css
@@ -1,16 +1,14 @@
 .room_table {
     overflow-y: scroll;
     border: 4px solid #000;
-    border-spacing: 0; 
-    border-collapse: separate; 
+    border-spacing: 0;
+    border-collapse: separate;
     border-radius: 10px 10px 10px 10px;
     margin: 0 auto;
-    width: 800px;
+    width: 80%;
     height: 1600px;
     overflow :auto;
 }
-
-
 
 .room_head{
    height: 120px;
