[ADD]フィルターフォームwp整え

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,18 @@
 }
 
 /* FIXME: Tailwindと同じようにしているが、早く教育して消したい。 */
+.w-full {
+  width: 100%;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.m-auto {
+  margin: 0 auto;
+}
+
 .mt-16 {
   margin-top: 4rem;
 }
@@ -18,6 +30,42 @@
   margin-top: 6rem;
 }
 
+.ml-auto {
+  margin-left: auto;
+}
+
 .ml-3 {
   margin-left: 0.75rem;
+}
+
+.ml-20 {
+  margin-left: 5rem;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
+.mr-20 {
+  margin-right: 5rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.block {
+  display: block;
 }
